--- a/app/globals.css
+++ b/app/globals.css
@@ -616,6 +616,7 @@ h1 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 8;
+  line-clamp: 8;
   overflow: hidden;
 }
 
